--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "sqlite3": "^5.1.7",
     "xml2js": "^0.6.2"
   },
-  "name": "rss2mircoblog",
-  "version": "1.0.2",
+  "name": "rss2microblog",
+  "version": "1.0.3",
   "description": "A Node.js application that automatically crossposts RSS feed items to multiple social media platforms",
   "main": "src/index.js",
   "devDependencies": {},
